# django-tutorial

./: README.md  pyproject.toml
Megaman/: manage.py
Megaman/Megaman/: asgi.py  settings.py  urls.py  wsgi.py
WorldTour/: manage.py
WorldTour/Europe/: apps.py  models.py  urls.py  views.py
WorldTour/Europe/migrations/: 0001_initial.py
WorldTour/Europe/template/trips/: index.html
WorldTour/Europe/templates/trips/: index.html
WorldTour/WorldTour/: asgi.py  settings.py  urls.py  wsgi.py
chefsTable/chefsTable/: settings.py  urls.py
chefsTable/myApp/: views.py
instagram/instagram/: settings.py
mysite/mysite/: settings.py
poll_maker/: manage.py
poll_maker/poll_maker/: asgi.py  settings.py  urls.py  wsgi.py
storefront/likes/: models.py
storefront/playground/: urls.py  views.py
storefront/playground/templates/: hello.html
storefront/store/: models.py
storefront/storefront/: settings.py
storefront/tags/: models.py
